<resources>
    <string name="app_name">Schoopy</string>
    <string name="iconAtLogin">iconLogin</string>
    <string name="email">E-mail</string>
    <string name="txtPassword">Password</string>
    <string name="fontSchoopy">\@font/sans-serif-medium</string>
    <string name="login">Login</string>
    <string name="title">Schoopy - My School Planner</string>
    <string name="textLayout">Text</string>
    <string name="teacherimg">teacherImg</string>
    <string name="_217">217: 5AHIFS</string>
    <string name="testmail">kaa@htl-villach.at</string>
    <string name="testname">Karasek Achim</string>
    <string name="hintname">Last First</string>
    <string name="borderListView">__________________________________</string>
    <string name="homepage">Homepage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="timetable">Timetable</string>
    <string name="find_the_teacher">Find The Teacher</string>
    <string name="logout">Logout</string>
    <string name="documents">Documents</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="monday">Mon</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="publicButton">Public</string>
    <string name="privateBtn">Private</string>
    <string name="uploadDoc">Upload</string>
    <string name="changepw">Change Passwort</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="current_password">Current Password</string>
    <string name="last_name">Last Name</string>
    <string name="new_password">New Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">E-mail</string>
    <string name="classP">Class</string>
    <string name="myacc">My Account</string>
    <string name="bwm">BWM_2</string>
    <string name="time">11:30 - 12:20</string>
</resources>
