<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homepage"
        android:title="@string/homepage"
        android:icon="@drawable/ic_homepage"></item>
    <item android:id="@+id/documents"
    android:title="@string/documents"
    android:icon="@drawable/ic_documents"></item>
    <item android:id="@+id/myAccount"
        android:title="@string/myacc"
        android:icon="@drawable/ic_person"></item>
    <item android:id="@+id/timetable"
        android:title="@string/timetable"
        android:icon="@drawable/ic_timetable"></item>
    <item android:id="@+id/findTheTeacher"
        android:title="@string/find_the_teacher"
        android:icon="@drawable/ic_my_location"></item>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit"></item>
</menu>