<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/listbackground"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgKategorie"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:contentDescription="@string/teacherimg"
            android:src="@drawable/teacher" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTeacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="cursive"
            android:hint="@string/hintname"
            android:inputType="text"
            android:text="@string/testname"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/time"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtWhere"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:text="@string/_217"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>