<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/iconAtLogin"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="256dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/txtPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        tools:ignore="TextFields"
        tools:targetApi="o" />

    <android.support.v7.widget.CardView
        android:id="@+id/btnLogin"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:layout_alignStart="@+id/txtUsername"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="71dp"
        app:cardBackgroundColor="@color/turquoise"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnUpload"
            android:layout_alignStart="@+id/btnLogin">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>