<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".MyAccountActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAccHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/alex_brush"
            android:text="@string/myacc"
            android:textAlignment="center"
            android:textColor="@color/turquoise"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/txtAccHead"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/txtUsername"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_firstname"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/txtFirstName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_lastname"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/txtClass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="211dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtClass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/txtLastName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_class"
            android:ems="10"
            android:hint="@string/classP"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="282dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableLeft="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtPasswordR"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/txtPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableStart="@drawable/ic_lock_new"
            android:ems="10"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:targetApi="o" />

        <android.support.v7.widget.CardView
            android:id="@+id/btnChangePW"
            android:layout_width="221dp"
            android:layout_height="44dp"
            android:layout_below="@id/txtPasswordR"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/turquoise"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnUpload"
                android:layout_below="@+id/btnChangePW"
                android:layout_alignStart="@+id/btnChangePW">

                <TextView
                    android:id="@+id/txtChangePW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/changepw"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/navigation">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>