<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:background="@drawable/background"
    tools:context=".LessonsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_content">

        <TextView
            android:id="@+id/txtLessHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alex_brush"
            android:text="@string/timetable"
            android:textAlignment="center"
            android:textColor="@color/turquoise"
            android:textSize="60sp" />

        <ListView
            android:id="@+id/monday"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_below="@id/hMonday"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp">

        </ListView>

        <ListView
            android:id="@+id/tuesday"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_below="@id/hTuesday"
            android:layout_alignTop="@+id/monday"
            android:layout_alignParentStart="true"
            android:layout_marginStart="72dp"
            android:layout_marginTop="1dp">

        </ListView>

        <ListView
            android:id="@+id/wednesday"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/monday"
            android:layout_alignParentStart="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="3dp">

        </ListView>

        <ListView
            android:id="@+id/thursday"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/monday"
            android:layout_alignParentStart="true"
            android:layout_marginStart="205dp"
            android:layout_marginTop="2dp">

        </ListView>

        <ListView
            android:id="@+id/friday"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/monday"
            android:layout_alignParentStart="true"
            android:layout_marginStart="268dp"
            android:layout_marginTop="2dp">

        </ListView>

        <TextView
            android:id="@+id/hMonday"
            android:layout_width="75.6dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLessHead"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="83dp"
            android:layout_toStartOf="@+id/hTuesday"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hTuesday"
            android:layout_width="75.6dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLessHead"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="82dp"
            android:layout_toEndOf="@+id/monday"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hWednesday"
            android:layout_width="75.6dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLessHead"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="82dp"
            android:layout_toStartOf="@+id/hThursday"
            android:layout_toEndOf="@+id/hTuesday"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hThursday"
            android:layout_width="75.6dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLessHead"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="82dp"
            android:layout_toEndOf="@+id/wednesday"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hFriday"
            android:layout_width="75.6dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/friday"
            android:layout_alignParentStart="@+id/txtLessHead"
            android:layout_alignParentTop="true"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="-12dp"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/navigation">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>