<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:layout_height="match_parent"
    tools:context=".DocumentsActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDocHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alex_brush"
            android:text="@string/documents"
            android:textAlignment="center"
            android:textColor="@color/turquoise"
            android:textSize="60sp"
            android:typeface="normal" />


        <Button
            android:id="@+id/btnPublic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_folder_public"
            android:fontFamily="monospace"
            android:text="@string/publicButton"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPrivate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="207dp"
            android:drawableStart="@drawable/ic_folder_public"
            android:fontFamily="monospace"
            android:text="@string/privateBtn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/navigation">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
