<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:background="@drawable/background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/iconAtLogin"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="192dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="105dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:lineSpacingExtra="36sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="80sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="139dp"
            tools:text="Schoopy  " />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="30dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/navigation">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>